--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /problema2/TestSueldo/nbproject/private/
 /problema2/TestSueldo/build/
 /problema2/TestSueldo/dist/
+/problema3/TestAutomotor/nbproject/private/
+/problema3/TestAutomotor/build/
+/problema4/TestBanco/nbproject/private/
+/problema4/TestBanco/build/
+/problema4/TestBanco/dist/
